Fix SonarQube issues across controllers, services, DTOs, configs, and unit tests