@@ -35,7 +35,7 @@ public class UserService {
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(this::toUserResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDto createUser(UserCreateRequest request) {
@@ -44,7 +44,7 @@ public class UserService {
         user.setPassword(passwordEncoder.encode(request.password()));
         user.setName(request.name());
         user.setEmail(request.email());
-        Role role = roleRepository.findByName(request.role()).orElseThrow(() -> new RuntimeException("Role not found"));
+        Role role = roleRepository.findByName(request.role()).orElseThrow(() -> new IllegalArgumentException("Role not found"));
         user.setRoles(Set.of(role));
         AppUser savedUser = userRepository.save(user);
         return toUserResponseDto(savedUser);
